src/test/deca/syntax/invalid/sansObjets/invalidIdentifier.deca
// Description:
//    tests de programme incorrect lexicalement (nom de variable invalide)
//
// Historique:
//    @DATE@

{
    int inv@lid;
}